# streamgeo

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO
cstreamgeo/: CMakeLists.txt  Doxyfile
cstreamgeo/benchmarks/: CMakeLists.txt  alignment_benchmark.c  benchmark.h  config.h  do_another_thing_benchmark.c
cstreamgeo/benchmarks/realdata/: README
cstreamgeo/benchmarks/realdata/segments/: 10466859.json  627564.json  6834600.json  9343401.json  oldlahondas.json
cstreamgeo/include/: cstreamgeo.h  dbg.h  libcut.h  similarity.h  streamio.h  stridedmask.h  util.h  utilc.h
cstreamgeo/include/cstreamgeo/: configreport.h  cstreamgeo.h  cstreamgeo_version.h  io.h  portability.h  roaringmask.h  stridedmask.h  utilasm.h  utilc.h  version.h
cstreamgeo/include/cstreamgeo/misc/: configreport.h
cstreamgeo/include/cstreamgeo/old_headers/: cstreamgeo.h  filters.h  roaringmask.h  stream.h
cstreamgeo/src/: CMakeLists.txt  alignment.c  filters.c  hellocuda.cu  io.c  point.c  roaringmask.c  similarity.c  stream.c  streamio.c  stridedmask.c
cstreamgeo/test/: filter_test.c  gui.c
cstreamgeo/tests/: CMakeLists.txt  alignment_unit.c  config.h.in  foo_unit.c  io_unit.c  roaring_mask_unit.c  similarity_test.c  stream_test.c  stream_unit.c  strided_mask_unit.c  unit.c
cstreamgeo/tests/benchmark/: CMakeLists.txt  alignment_benchmark.c
cstreamgeo/tests/benchmark/realdata/activities/: 615703770.json
cstreamgeo/tests/benchmark/realdata/segments/: 10075080.json  11697981.json  8109834.json  9290392.json  9409396.json
cstreamgeo/tests/cmocka/: cmocka.c  cmocka.h
cstreamgeo/tests/testdata/: README
cstreamgeo/tests/unit/: CMakeLists.txt  stream_unit_test.c  strided_mask_unit_test.c  test.h
cstreamgeo/tools/: clang-format-check.sh  clang-format.sh  valgrind.sh
cstreamgeo/tools/cmake/: FindCTargets.cmake  FindLTO.cmake  FindOptions.cmake
jstreamgeo/: README.md  pom.xml
jstreamgeo/src/main/java/com/strava/jstreamgeo/: JStreamGeo.java
jstreamgeo/src/test/java/com/strava/jstreamgeo/: JStreamGeoTest.java
pystreamgeo/: CMakeLists.txt  setup.py.in
pystreamgeo/pystreamgeo/: streamgeo.py  typemap.py
pystreamgeo/tests/: similarity_bench.py
